<resources>
    <string name="app_name">Shopping App Database Kotlin</string>

    <string name="items">Items</string>
    <string name="name">Name: %s</string>
    <string name="sku">SKU: %s</string>
    <string name="price">Price: $%s</string>

    <string name="user_cyberthug69">User: CyberThug69</string>
    <string name="_0_items">0 Items</string>
    <plurals name="item_count">
        <item quantity="one">%s Item</item>
        <item quantity="other">%s Items</item>
    </plurals>
    <string name="charge_0_00">Charge $0.00</string>
    <string name="format_charge">Charge $%s</string>

    <string name="order_history">Order History</string>
    <string name="cyberthug69_s_order_history">CyberThug69\'s Order History</string>
    <string name="back_to_order">Back to Order</string>

    <string name="total">Total: %s</string>
    <string name="number_of_items">Number of items: %s</string>
    <string name="order_number">Order Number: %s</string>
    <string name="clear_history">Clear History</string>
    <string name="items_purchased">Items Purchased</string>
</resources>