<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/layout_border">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/image_padding">

            <TextView
                android:id="@+id/order_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/order_number"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:id="@+id/number_of_items_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/number_of_items"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:id="@+id/total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/total"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/image_padding">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/items_purchased"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_rv"
                android:background="@drawable/layout_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/image_padding"
                app:layout_constraintTop_toBottomOf="@id/item_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>