<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_border">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_padding"
        app:layout_constraintBottom_toTopOf="@id/order_rv"
        app:layout_constraintEnd_toStartOf="@id/history_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_cyberthug69"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

        <TextView
            android:id="@+id/item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/image_size"
            android:text="@string/_0_items"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_padding"
        android:text="@string/order_history"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintBottom_toTopOf="@+id/order_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/header_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/image_padding"
        app:layout_constraintBottom_toTopOf="@id/charge_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/charge_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/image_padding"
        android:padding="@dimen/image_padding"
        android:text="@string/charge_0_00"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_rv"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>